--- a/data/config/ai/transdec_qual.yml
+++ b/data/config/ai/transdec_qual.yml
@@ -1,29 +1,10 @@
-taskOrder: ['ram.ai.course.Gate', 'ram.ai.course.PipeGate',
-            'ram.ai.course.Light', 'ram.ai.course.Bin',
-            'ram.ai.course.Pinger', 'ram.ai.course.SafeSonar',
-            'ram.ai.course.Octagon']
+taskOrder: ['ram.ai.course.Gate', 'ram.ai.course.Pipe']
 
 config:
-    gateDepth: 4
-    lightDepth: 4.75
+    gateDepth: 5
     pipeDepth: 7
-    bwireDepth: 10
-    targetDepth: 8.1
-    binStartDepth: 7
-    binDepth: 12
-    targetSymbols: ['Aircraft', 'Ship']
-    sonarDepth: 5
-    safeDepth: 9
-    safeOffset: -0.4
-    Gate:
-        time: 30
-        speed: 3
-    Light:
-        forwardDuration: 10
-    Bin:
-        duration: 30
-        forwardDuration: 10
-        heading: 15 # -45
-        absolute: True
-        binDirection: 45
-        adjustAngle: False
+    pipesToFind: 2
+    Pipe:
+        taskTimeout: 180
+        biasDirection: -125
+        threshold: 30
