--- a/tools/simulator/data/config/base.yml
+++ b/tools/simulator/data/config/base.yml
@@ -271,7 +271,7 @@ Simulation:
         # in 'data/scenes/nxtest.xml'
         #Main: objectives/pipe.sml
         #Main: objectives/bin.sml
-        #Main: objectives/duct.sml
+        Main: objectives/duct.sml
         #Main: objectives/multi_pipe.sml
         #Main: objectives/barbedwire.sml
         #Main: objectives/hedge.sml
@@ -280,7 +280,7 @@ Simulation:
         #Main: objectives/buoy.sml
         #Main: objectives/multi_buoy.sml
         #Main: objectives/pinger.sml
-        Main: objectives/safe.sml
+        #Main: objectives/safe.sml
         #Main: transdec.sml
         #Main: nxtest.sml
         #Main: gen_course.sml
