'''Simulator''' Vision config needed updated for changes to the symbol detector

--- a/tools/simulator/data/config/vision/default.yml
+++ b/tools/simulator/data/config/vision/default.yml
@@ -54,5 +54,5 @@ BuoyDetector:
 
 BinDetector:
 #    logSymbolImages: true
-    symbolDetector: BasicWeaponDetector
+    symbolDetector: BasicLetterDetector
 
