'''VisionTool''' added ability to view networked cameras

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -46,5 +46,6 @@ if (RAM_WITH_WRAPPERS)
 endif ()
 
 subdirs(tools/vision_tool)
+subdirs(tools/vision_tool_v2)
 subdirs(tools/vision_viewer)
 subdirs(tools/plot)
