--- a/tools/simulator/data/config/base.yml
+++ b/tools/simulator/data/config/base.yml
@@ -279,8 +279,11 @@ Simulation:
         #Main: objectives/target2.sml
         #Main: objectives/buoy.sml
         #Main: objectives/multi_buoy.sml
-        Main: objectives/pinger.sml
+        #Main: objectives/pinger.sml
         #Main: objectives/safe.sml
+        #Main: objectives/vase.sml
+        #Main: objectives/window.sml
+        Main: objectives/caesar.sml
         #Main: transdec.sml
         #Main: nxtest.sml
         #Main: gen_course.sml
