'''Simulator''' Adding grapes task

--- a/tools/simulator/data/config/base.yml
+++ b/tools/simulator/data/config/base.yml
@@ -283,7 +283,8 @@ Simulation:
         #Main: objectives/safe.sml
         #Main: objectives/vase.sml
         #Main: objectives/window.sml
-        Main: objectives/caesar.sml
+        #Main: objectives/caesar.sml
+        Main: objectives/emperorGrapes.sml
         #Main: transdec.sml
         #Main: nxtest.sml
         #Main: gen_course.sml
