--- a/BlackfinScope/Info.plist
+++ b/BlackfinScope/Info.plist
@@ -7,7 +7,7 @@
 	<key>CFBundleExecutable</key>
 	<string>${EXECUTABLE_NAME}</string>
 	<key>CFBundleIconFile</key>
-	<string></string>
+	<string>app.icns</string>
 	<key>CFBundleIdentifier</key>
 	<string>edu.umd.ram.${PRODUCT_NAME:identifier}</string>
 	<key>CFBundleInfoDictionaryVersion</key>
