I'd rather not have to commit this, but otherwise I can't pull...

--- a/data/config/base.yml
+++ b/data/config/base.yml
@@ -446,7 +446,8 @@ Controller:
         dtMax: 0.1
 
     RotationalController:
-        type: NonlinearPDRotationalController
+        #type: NonlinearPDRotationalController
+        type: NonlinearLinearVelocityAdaptivePDRotationalController
         kp: 22.5
         kd: 2
         dtMin: 0.005
