will now report the gate if a single side is found, azimuth now tells how many gatepieces are being used 1 or 2

--- a/data/config/vision/Transdec2013_cloudy.yml
+++ b/data/config/vision/Transdec2013_cloudy.yml
@@ -258,3 +258,20 @@ BuoyDetector:
     minWidth: 50
     rightIgnorePercentage: 0
     topIgnorePercentage: 0
+GateDetector:
+    ErosionSize: 2
+    GreenHuemax: 80
+    GreenHuemin: 25
+    MaxAngleDiff: 20
+    RedHuemax: 127
+    RedHuemin: 9
+    RefelctionDiff: 50
+    Saturationmax: 157
+    Saturationmin: 0
+    Valuemax: 255
+    Valuemin: 0
+    diff: 100
+    maxAspectRatio: 6
+    minArea: 200
+    minAspectRatio: 0.25
+    thresholdwithred: 1
