--- a/data/config/vision/Transdec2013_cloudy.yml
+++ b/data/config/vision/Transdec2013_cloudy.yml
@@ -176,21 +176,6 @@ HedgeDetector:
     minArea: 200
     minAspectRatio: 0.25
     thresholdwithred: 1
-OrangePipeDetector:
-    MaxAspectRatio: 5
-    MinSize: 15
-    erodeIterations: 1
-    filtRedCMax: 255
-    filtRedCMin: 107
-    filtRedHMax: 90
-    filtRedHMin: 0
-    filtRedLMax: 255
-    filtRedLMin: 70
-    minPixels: 3000
-    minPixelsFound: 2500
-    noHough: 0
-    samePipeThreshold: 0.2
-BinDetector:
     CalcTraining: 0
     CompareBins: 0
     MaxdistanceX: 90
@@ -324,3 +309,60 @@ DBuoyDetector:
     minWidth: 50
     rightIgnorePercentage: 0
     topIgnorePercentage: 0
+OrangePipeDetector:
+    MaxAspectRatio: 5
+    MinSize: 15
+    dilateIterations: 2
+    erodeIterations: 0
+    filtRedCMax: 255
+    filtRedCMin: 116
+    filtRedHMax: 245
+    filtRedHMin: 0
+    filtRedLMax: 69
+    filtRedLMin: 35
+    minPixels: 3000
+    minPixelsFound: 2500
+    noHough: 0
+    samePipeThreshold: 0.2
+GateDetector:
+    CannyHigh: 150
+    CannyLow: 50
+    Dilate: 1
+    ErosionSize: 2
+    GreenHuemax: 255
+    GreenHuemin: 0
+    MaxAngleDiff: 20
+    RedHuemax: 255
+    RedHuemin: 0
+    RefelctionDiff: 50
+    Saturationmax: 255
+    Saturationmin: 0
+    ToptoIgnore: 150
+    Valuemax: 255
+    Valuemin: 120
+    diff: 100
+    maxAspectRatio: 6
+    minArea: 200
+    minAspectRatio: 0.25
+    thresholdwithred: 0
+HedgeDetector:
+    CannyHigh: 150
+    CannyLow: 50
+    Dilate: 1
+    ErosionSize: 2
+    GreenHuemax: 255
+    GreenHuemin: 0
+    MaxAngleDiff: 20
+    RedHuemax: 127
+    RedHuemin: 9
+    RefelctionDiff: 50
+    Saturationmax: 255
+    Saturationmin: 212
+    ToptoIgnore: 150
+    Valuemax: 255
+    Valuemin: 0
+    diff: 100
+    maxAspectRatio: 3.75
+    minArea: 200
+    minAspectRatio: 0.5
+    thresholdwithred: 0
