Cleaned up State and StateMachine a lot, added validation for transitions, and created a separate configure step for states.

--- a/tools/simulator/data/config/ai/default_state.yml
+++ b/tools/simulator/data/config/ai/default_state.yml
@@ -2,7 +2,11 @@ ram.ai.new.mainState.Body:
     start:
         type: Start
         transitions:
-            next: forward
+            next: test
+    test:
+        type: TesterState
+        transitions:
+            next: forward  
 
     forward:
         type: Forward
