--- a/data/config/ai/transdec2014_state.yml
+++ b/data/config/ai/transdec2014_state.yml
@@ -6,7 +6,10 @@ ram.ai.new.mainState.Body:
     forward:
       type: TorpedoTask
       init:
-        configNode: {}, success: 'end', failure: 'end', duration: 10000
+        configNode: {}
+        success: 'end'
+        failure: 'end'
+        duration: 10000
     end:
       type: End
 
