--- a/tools/simulator/data/config/base.yml
+++ b/tools/simulator/data/config/base.yml
@@ -278,7 +278,7 @@ Simulation:
     Scenes:
         # Each scene must be on the given scene_path, this for example is 
         # in 'data/scenes/nxtest.xml'
-        #Main: objectives/pipe.sml
+        Main: objectives/pipe.sml
         #Main: objectives/bin.sml
         #Main: objectives/duct.sml
         #Main: objectives/multi_pipe.sml
@@ -287,7 +287,7 @@ Simulation:
         #Main: objectives/target.sml
         #Main: objectives/target2.sml
         #Main: objectives/buoy.sml
-        Main: objectives/multi_buoy.sml
+        #Main: objectives/multi_buoy.sml
         #Main: objectives/pinger.sml
         #Main: objectives/safe.sml
         #Main: objectives/vase.sml
@@ -297,7 +297,7 @@ Simulation:
         #Main: transdec.sml
         #Main: nxtest.sml
         #Main: gen_course.sml
-        Main: safePing.sml
+        #Main: safePing.sml
         #Main: shortCourse.sml
         #Main: nbrf_tank.sml
         #Main: nbrf_tank_demo.sml
