--- a/data/config/vision/Transdec2014_temp.yml
+++ b/data/config/vision/Transdec2014_temp.yml
@@ -221,15 +221,15 @@ GateDetector:
     minArea: 0
     minAspectRatio: 0.3
     thresholdwithred: 1
-ChrisPipeDetector:
+FowardPipeDetector:
     BlurAmount: 5
     DistanceRef: 50
-    HueShiftNumber: 14.91
+    HueShiftNumber: 15
     MaxAreaRatio: 1
-    MaxPerimeter: 0.5
+    MaxPerimeter: 10.5
     MinAreaRatio: 0
     MinPerimeter: 0
-    Threshvalue: 18
+    Threshvalue: 20
     dilateIterations: 0
     filtRedCMax: 255
     filtRedCMin: 0
@@ -238,6 +238,29 @@ ChrisPipeDetector:
     filtRedLMax: 255
     filtRedLMin: 70
     maxAspectRatio: 7
+    minAspectRatio: 0
+    minPixels: 3000
+    minPixelsFound: 2500
+    minSize: 70
+    noHough: 0
+    samePipeThreshold: 0.2
+ChrisPipeDetector:
+    BlurAmount: 5
+    DistanceRef: 50
+    HueShiftNumber: 15
+    MaxAreaRatio: 4
+    MaxPerimeter: 0.2
+    MinAreaRatio: 0
+    MinPerimeter: 0
+    Threshvalue: 15
+    dilateIterations: 0
+    filtRedCMax: 255
+    filtRedCMin: 0
+    filtRedHMax: 90
+    filtRedHMin: 0
+    filtRedLMax: 255
+    filtRedLMin: 70
+    maxAspectRatio: 0.6
     minAspectRatio: 0
     minPixels: 3000
     minPixelsFound: 2500
