--- a/data/config/ai/transdec2014_pipe_align.yml
+++ b/data/config/ai/transdec2014_pipe_align.yml
@@ -10,7 +10,11 @@ ram.ai.new.mainState.Body:
     pipe1:
       type: PipeAlign
       init:
-        searchDist: 20        
+        searchDist: 20
+    buf1:
+        type: Forward
+        init:
+            distance: 0
     forward2:
        type: Forward
        init:
@@ -19,6 +23,10 @@ ram.ai.new.mainState.Body:
       type: PipeAlign
       init:
         searchDist: 20
+    buf2:
+        type: Forward
+        init:
+            distance: 0
     bins:
       type: BinsTask
       init:
@@ -34,6 +42,8 @@ ram.ai.new.mainState.Body:
   transitions:
     - [start, next, forward1]
     - [forward1, next, pipe1]
-    - [pipe1, complete, forward2]
+    - [pipe1, complete, buf1]
+    - [buf1, next, forward2]
     - [forward2, next, pipe2]
-    - [pipe2, complete, bins]
+    - [pipe2, complete, buf2]
+    - [buf2, next, bins]
